<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.search.ImagePostSearchActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <SearchView
            android:id="@+id/contentSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/searchArtworksButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentSearchView"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_toLeftOf="@+id/searchVideosButton"
            android:text="@string/image_posts"
            android:textColor="@color/white"
            app:backgroundColor="@color/purple_500" />

        <Button
            android:id="@+id/searchVideosButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentSearchView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/video_posts"
            android:textColor="@color/black"
            app:backgroundColor="#FFFFFF" />

        <Button
            android:id="@+id/searchArtistsButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentSearchView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/searchVideosButton"
            android:text="@string/users"
            android:textColor="@color/black"
            app:backgroundColor="#FFFFFF" />

        <Spinner
            android:id="@+id/topicSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchVideosButton"
            android:layout_marginTop="7dp" />

        <GridView
            android:id="@+id/artworksGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topicSpinner"
            android:layout_marginTop="10dp"
            android:horizontalSpacing="5dp"
            android:verticalSpacing="5dp"
            android:numColumns="3" />

        <TextView
            android:id="@+id/noResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="No result" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>